--- a/package.json
+++ b/package.json
@@ -9,9 +9,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dicebear/collection": "^5.1.2",
+    "@dicebear/core": "^5.1.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
+    "@mui/styled-engine-sc": "^5.11.0",
+    "@resvg/resvg-js": "^2.0.0",
+    "axios": "^1.2.5",
+    "clsx": "^1.2.1",
+    "exiftool-vendored": "^16.3.0",
+    "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-inlinesvg": "^3.0.1",
+    "react-router-dom": "^6.8.0",
+    "react-use": "^17.4.0",
+    "sharp": "^0.30.4",
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -19,6 +39,8 @@
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
